docs-archive/apache-airflow-providers-common-ai/0.7.0/_sources/_api/airflow/providers/common/ai/exceptions/index.rst.txt
airflow.providers.common.ai.exceptions
======================================

.. py:module:: airflow.providers.common.ai.exceptions


Exceptions
----------

.. autoapisummary::

   airflow.providers.common.ai.exceptions.HITLMaxIterationsError
   airflow.providers.common.ai.exceptions.LLMFileAnalysisError
   airflow.providers.common.ai.exceptions.LLMFileAnalysisUnsupportedFormatError
   airflow.providers.common.ai.exceptions.LLMFileAnalysisLimitExceededError
   airflow.providers.common.ai.exceptions.LLMFileAnalysisMultimodalRequiredError


Module Contents
---------------

.. py:exception:: HITLMaxIterationsError

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Raised when the HITL review loop exhausts max iterations without approval or rejection.


.. py:exception:: LLMFileAnalysisError

   Bases: :py:obj:`ValueError`


   Base class for file-analysis validation errors.


.. py:exception:: LLMFileAnalysisUnsupportedFormatError

   Bases: :py:obj:`LLMFileAnalysisError`


   Raised when a file format is not supported by LLM file analysis.


.. py:exception:: LLMFileAnalysisLimitExceededError

   Bases: :py:obj:`LLMFileAnalysisError`


   Raised when file-analysis safety limits are exceeded.


.. py:exception:: LLMFileAnalysisMultimodalRequiredError

   Bases: :py:obj:`LLMFileAnalysisUnsupportedFormatError`


   Raised when image/PDF inputs are used without ``multi_modal=True``.


